--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="ownindex.html" class="nav__link">Home</a></li>
+                        <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
                         <li class="nav__item"><a href="aboutme.html" class="nav__link">About Me</a></li>
                         <li class="nav__item"><a href="education.html" class="nav__link">Education</a></li>
                         <li class="nav__item"><a href="project.html" class="nav__link">My Project</a></li>
