--- a/cv.html
+++ b/cv.html
@@ -155,7 +155,7 @@
   </div>
   <div class="resume_right">
     <div class="resume_item resume_about">
-	<a href="ownindex.html"><button>Back Home</button></a>
+	<a href="index.html"><button>Back Home</button></a>
         <div class="title">
            <p class="bold">About Me</p>
          </div>
